grafana.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: grafana
  name: grafana-ip-service
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    run: grafana
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      run: grafana
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: grafana
    spec:
      containers:
      - image: grafana/grafana:3.1.0
        name: grafana
        resources:
          # keep request = limit to keep this container in guaranteed class
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi        
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: grafana-persistent-storage
          mountPath: /var
      volumes:
      - name: grafana-persistent-storage
        emptyDir: {}
