prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: prometheus
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      run: prometheus
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: prometheus
    spec:
      containers:
      - image: prom/prometheus
        name: prometheus
        args:
        - "--config.file=/etc/prometheus/prometheus.yml"
        - "--storage.tsdb.path=/prometheus/"
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: prometheus-config-volume
          mountPath: /etc/prometheus/
        - name: prometheus-storage-volume
          mountPath: /prometheus/
        resources: {}
      volumes:
      - name: prometheus-config-volume
        configMap:
          defaultMode: 420
          name: prometheus-server-conf

      - name: prometheus-storage-volume
        emptyDir: {} 
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: prometheus
  name: prometheus-ip-service
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/metrics'
    prometheus.io/port: '9090'
spec:
  type: ClusterIP
  ports:
  - port: 9090
    targetPort: 9090
  selector:
    run: prometheus
status:
  loadBalancer: {}
